<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/reg_account"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/account"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="54dp" />

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_account"
        android:hint="@string/Username"
        android:textSize="@dimen/input"
        android:layout_marginTop="10dp" />
    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_name"
        android:hint="@string/Email"
        android:textSize="@dimen/input"
        android:layout_marginTop="10dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_password"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/input"
        android:inputType="textPassword"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reg_confirm_password"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/input"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_register"
        android:id="@+id/btn_register"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/input"
        android:textColor="@android:color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login_here"
        android:textColorHighlight="@color/colorAccent"
        android:contextClickable="true"
        android:id="@+id/txt_already_have_an_account"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/input"
        android:textColor="@color/colorPrimary"/>
</LinearLayout>