<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    android:orientation="vertical"
    android:weightSum="3"
    android:background="@drawable/book"


   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        android:layout_weight="1">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp"
    android:id="@+id/cover_img"
    />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookTitle"
        android:text="@string/book_title"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"


        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textAlignment="center"
        android:textSize="20sp"
        android:id="@+id/bookCategory"
        android:textColor="@android:color/white"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bookDescription"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@android:color/white"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_register"
        android:id="@+id/btn_home"/>
</LinearLayout>