<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:layout_margin="8dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="login"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="8dp"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:src="@drawable/account"
        android:layout_gravity="center_horizontal"
        android:id="@+id/login_logo"
        android:layout_marginTop="50sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_marginTop="30sp"
        android:hint="@string/Username"
        android:textSize="@dimen/input"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:textSize="@dimen/input"
        android:layout_marginTop="30sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAllCaps="false"
        android:layout_marginTop="30sp"
        android:background="@drawable/button_register"
        android:textColor="@android:color/white"
        android:id="@+id/login_button"
        android:textSize="@dimen/input"
        />
    <TextView
        android:id="@+id/not_yet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_a_member_register_here"
        android:textSize="@dimen/input"
        android:layout_marginTop="40sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAlignment="center"

        />
</LinearLayout>